--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 
   <!-- main js file -->
   <script src="js/main.js"></script>
+   <script src="/__/firebase/7.2.2/firebase-app.js"></script>
+   <script src="/__/firebase/init.js"></script>
+    
 </body>
 
 </html>
