--- a/index.html
+++ b/index.html
@@ -3,46 +3,139 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SINGLE PAGE WEB APP TEMPLATE</title>
+  <title>Arlagården® Plus</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Get started with HTML, CSS and JavaScript">
-  <meta name="author" content="Rasmus Cederdorff">
+  <meta name="description" content="Arla B2B project">
+
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 </head>
 
 <body>
   <!-- tabbar navigation -->
-  <nav class="tabbar">
-    <a href="#home" onclick="showPage('home')">Home</a>
-    <a href="#about" onclick="showPage('about')">About</a>
-    <a href="#clients" onclick="showPage('clients')">Clients</a>
-    <a href="#contact" onclick="showPage('contact')">Contact</a>
+  <nav class="sideNav">
+    <ul>
+      <li><a id="logoAnchor" href="https://www.arla.dk/" target="_blank"><img class="logo" src="img/arlaLogo.svg"></a></li>
+      <li><a href="#dashboard" onclick="showPage('dashboard')"><img src="img/dashboard.svg"></a></li>
+      <li><a href="#survey" onclick="showPage('survey')"><img src="img/survey.svg"></a></li>
+      <li><a href="#statistics" onclick="showPage('statistics')"><img src="img/statistics.svg"></a></li>
+      <li><a href="#leaderboard" onclick="showPage('leaderboard')"><img src="img/leaderboard.svg"></a></li>
+      <li><a href="#profile" onclick="showPage('profile')"><img src="img/profile.svg"></a></li>
+    </ul>
   </nav>
 
   <!-- pages -->
-  <!-- home page -->
-  <section id="home" class="page">
-    <header class="topbar">
-      <h2>Home</h2>
-    </header>
-    <p>My Single Page Web App Template</p>
+  <!-- dashboard page -->
+  <section id="dashboard" class="page">
+    <main>
+      <section class="row">
+        <header class="col s12 m9">
+          <h1>Welcome to Arlagården Plus</h1>
+          <p>Remember to fill in the survey</p>
+        </header>
+        <section class="col s12 m3">
+          <h2>Leaderboard</h2>
+          <p>Top 5 Farmers</p>
+        </section>
+      </section>
+      <section class="row">
+        <section class="col s6">
+          <h2>Total Carbon Footprint</h2>
+          <p>Your total carbon footprint</p>
+          <p>What a nice graph that should be here, which we definitely put here instead of just a text saying we put it in</p>
+
+        </section>
+        <section class="col s6">
+          <h2>Tips and Tricks</h2>
+          <p>A tip a day keeps the CO2 Away</p>
+        </section>
+      </section>
+    </main>
   </section>
 
-  <!-- about page -->
-  <section id="about" class="page">
-    <header class="topbar">
-      <h2>About</h2>
-    </header>
-    <p>This is my about page</p>
+  <!-- survey page -->
+  <section id="survey" class="page">
+    <section class="row">
+      <header class="col s12">
+        <h1>Sustainability Survey</h1>
+      </header>
+    </section>
+    <section class="surveyNav">
+      <h2>Categories</h2>
+      <ul>
+        <li><a href="#anchor">Cows</a></li>
+        <li><a href="#anchor">Herd</a></li>
+        <li><a href="#anchor">Energy</a></li>
+        <li><a href="#anchor">Another Category</a></li>
+        <li><a href="#anchor">More stuff</a></li>
+      </ul>
+      <div class="surveyProgressBar"></div>
+    </section>
+    <section class="row">
+      <p>This where we would put our inputs... IF WE HAD ANY!</p>
+    </section>
   </section>
 
-  <!-- clients page -->
-  <section id="clients" class="page">
-    <header class="topbar">
-      <h2>Clients</h2>
-    </header>
-    <p>Hmm, there should be some clients right here...</p>
+  <!-- statistics page -->
+  <section id="statistics" class="page">
+    <section class="row">
+      <header class="col s12">
+        <h1>Statistics</h1>
+      </header>
+    </section>
+    <section class="row">
+      <section class="col s12 m3">
+        <h2>Total Carbon Footprint</h2>
+        <p>Take a look at your farms total carbon footprint over the years.</p>
+        <p>Underneath you can find more in-depht knowledge on how you can improve.</p>
+      </section>
+      <section class="col s12 m9">
+        <!-- Insert Chart JS here -->
+        <canvas id="myChart" width="400" height="400"></canvas>
+      </section>
+    </section>
+    <section class="row">
+      <section class="col s12 m6">
+        <p>You Emitted</p>
+        <p>2,7% Less CO2e<br>than last year</p>
+      </section>
+      <section class="col s12 m6">
+        <p>You Emitted</p>
+        <p>14,2% Less CO2e<br>than 2015</p>
+      </section>
+    </section>
+    <section class="row">
+      <section class="col s12 m6">
+        <!-- Insert Chart JS here -->
+      </section>
+      <section class="col s12 m6">
+        <p>Emmision from</p>
+        <button>Choose Output</button>
+        <h2>Diesel</h2>
+        <p>The machinery, tractors etc. on farm can be changed to models using less fuel and more non-fossil fuels. Farmers can practice eco-driving to reduce mileage and fuel usage per kilometer.</p>
+      </section>
+    </section>
+    <section class="row">
+      <section class="col s12 m6">
+        <p>Emmision from</p>
+        <button>Choose Output</button>
+        <h2>Electricity and Heating</h2>
+        <p>The farm can produce renewable energy through solar panels, biogas or wind turbines. Currently the electricity produced on Arla farms equals 61% of their total electricity usage.</p>
+      </section>
+      <section class="col s12 m6">
+        <!-- Insert Chart JS here -->
+      </section>
+    </section>
+    <section class="row">
+      <section class="col s12">
+        <h2>The goal for this year is 3% reduction in CO2e</h2>
+      </section>
+    </section>
   </section>
 
   <!-- contact page -->
@@ -57,11 +150,17 @@
     </a>
   </section>
 
+  <!-- MaterializeCSS - Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
+  <!-- auth maybe? -->
+  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
   <!-- main js file -->
   <script src="js/main.js"></script>
-   <script src="/__/firebase/7.2.2/firebase-app.js"></script>
-   <script src="/__/firebase/init.js"></script>
-    
+
 </body>
 
 </html>
