--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
   <section id="dashboard" class="page">
     <main>
       <section class="row">
-        <header class="col s12 m9">
+        <header class="col s12 l9">
           <h1>Welcome to Arlagården Plus</h1>
           <p>Remember to fill in the survey</p>
         </header>
-        <section class="col s12 m3">
+        <section class="col s12 l3">
           <h2>Leaderboard</h2>
           <p>Top 5 Farmers</p>
         </section>
       </section>
       <section class="row">
-        <section class="col s12 m6">
+        <section class="col s12 l6">
           <h2>Total Carbon Footprint</h2>
           <p>Your total carbon footprint</p>
           <p>What a nice graph that should be here, which we definitely put here instead of just a text saying we put it in</p>
 
         </section>
-        <section class="col s12 m6">
+        <section class="col s12 l6">
           <h2>Tips and Tricks</h2>
           <p>A tip a day keeps the CO2 Away</p>
         </section>
@@ -105,31 +105,31 @@
       </header>
     </section>
     <section class="row">
-      <section class="col s12 m3">
+      <section class="col s12 l3">
         <h2>Total Carbon Footprint</h2>
         <p>Take a look at your farms total carbon footprint over the years.</p>
         <p>Underneath you can find more in-depht knowledge on how you can improve.</p>
       </section>
-      <section class="col s12 m9">
+      <section class="col s12 l9">
         <!-- Insert Chart JS here -->
         <canvas id="myChart" width="200" height="200"></canvas>
       </section>
     </section>
     <section class="row">
-      <section class="col s12 m6">
+      <section class="col s12 l6">
         <p>You Emitted</p>
         <p>2,7% Less CO2e<br>than last year</p>
       </section>
-      <section class="col s12 m6">
+      <section class="col s12 l6">
         <p>You Emitted</p>
         <p>14,2% Less CO2e<br>than 2015</p>
       </section>
     </section>
     <section class="row">
-      <section class="col s12 m6">
+      <section class="col s12 l6">
         <!-- Insert Chart JS here -->
       </section>
-      <section class="col s12 m6">
+      <section class="col s12 l6">
         <p>Emmision from</p>
         <button>Choose Output</button>
         <h2>Diesel</h2>
@@ -137,13 +137,13 @@
       </section>
     </section>
     <section class="row">
-      <section class="col s12 m6">
+      <section class="col s12 l6">
         <p>Emmision from</p>
         <button>Choose Output</button>
         <h2>Electricity and Heating</h2>
         <p>The farm can produce renewable energy through solar panels, biogas or wind turbines. Currently the electricity produced on Arla farms equals 61% of their total electricity usage.</p>
       </section>
-      <section class="col s12 m6">
+      <section class="col s12 l6">
         <!-- Insert Chart JS here -->
       </section>
     </section>
