charts functional now

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <section class="row">
       <section class="col s12 m6">
         <!-- Insert Chart JS here -->
+        <canvas id="myChart2" width="200" height="200"></canvas>
       </section>
       <section class="col s12 m6">
         <p>Emmision from</p>
@@ -128,7 +129,7 @@
         <p>The farm can produce renewable energy through solar panels, biogas or wind turbines. Currently the electricity produced on Arla farms equals 61% of their total electricity usage.</p>
       </section>
       <section class="col s12 m6">
-        <!-- Insert Chart JS here -->
+        <!-- Insert Chart JS here --><canvas id="myChart3" width="200" height="200"></canvas>
       </section>
     </section>
     <section class="row">
