--- a/index.html
+++ b/index.html
@@ -110,18 +110,17 @@
         <p>Underneath you can find more in-depht knowledge on how you can improve.</p>
       </section>
       <section id="totalChart" class="col s12 l8">
-        <!-- Insert Chart JS here -->
         <canvas id="myChart"></canvas>
       </section>
     </section>
     <section class="row">
-      <section class="col s12 l6">
+      <section id="emittedLastYear" class="col s12 m6 emitted">
         <p>You Emitted</p>
-        <p>2,7% Less CO2e<br>than last year</p>
+        <p>2,7% Less CO2<span>e</span><br>than last year</p>
       </section>
-      <section class="col s12 l6">
+      <section id="emittedSince" class="col s12 m6 emitted">
         <p>You Emitted</p>
-        <p>14,2% Less CO2e<br>than 2015</p>
+        <p>14,2% Less CO2<span>e</span><br>than 2015</p>
       </section>
     </section>
     <section class="row">
@@ -129,17 +128,15 @@
         <!-- Insert Chart JS here -->
         <canvas id="myChart2" width="200" height="200"></canvas>
       </section>
-      <section class="col s12 l6">
-        <p>Emmision from</p>
-        <button>Choose Output</button>
+      <section id="output1" class="col s12 l6">
+        <p class="emmascript">Emmision from<button>Choose Output &#9660;</button></p>
         <h2>Diesel</h2>
         <p>The machinery, tractors etc. on farm can be changed to models using less fuel and more non-fossil fuels. Farmers can practice eco-driving to reduce mileage and fuel usage per kilometer.</p>
       </section>
     </section>
     <section class="row">
-      <section class="col s12 l6">
-        <p>Emmision from</p>
-        <button>Choose Output</button>
+      <section id="output2" class="col s12 l6">
+        <p class="emmascript">Emmision from<button>Choose Output &#9660;</button></p>
         <h2>Electricity and Heating</h2>
         <p>The farm can produce renewable energy through solar panels, biogas or wind turbines. Currently the electricity produced on Arla farms equals 61% of their total electricity usage.</p>
       </section>
@@ -148,7 +145,7 @@
       </section>
     </section>
     <section class="row">
-      <section class="col s12">
+      <section id="goalImage" class="col s12">
         <h2>The goal for this year is 3% reduction in CO2e</h2>
       </section>
     </section>
