validated the code, removed console logs

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
         </label>
       </div>
       <div class="center-holder">
-        <a id="logoAnchor" href="https://www.arla.dk/" target="_blank"><img class="logo" src="img/arlaLogo.svg"></a>
+        <a id="logoAnchor" href="https://www.arla.dk/" target="_blank"><img class="logo" alt="arla logo" src="img/arlaLogo.svg"></a>
       </div>
       <div class="right-holder">
         <p>help icon?</p>
       </div>
     </div>
     <ul>
-      <li><a href="#dashboard" onclick="showPage('dashboard'), removeNavUl()"><img src="img/dashboard.svg"></a></li>
-      <li><a href="#survey" onclick="showPage('survey'), removeNavUl()"><img src="img/survey.svg"></a></li>
-      <li><a href="#statistics" onclick="showPage('statistics'), removeNavUl()"><img src="img/statistics.svg"></a></li>
-      <li><a href="#leaderboard" onclick="showPage('leaderboard'), removeNavUl()"><img src="img/leaderboard.svg"></a></li>
-      <li><a href="#profile" onclick="showPage('profile'), removeNavUl()"><img src="img/profile.svg"></a></li>
+      <li><a href="#dashboard" onclick="showPage('dashboard'), removeNavUl()"><img src="img/dashboard.svg" alt="dashboard icon"></a></li>
+      <li><a href="#survey" onclick="showPage('survey'), removeNavUl()"><img src="img/survey.svg" alt="survey icon"></a></li>
+      <li><a href="#statistics" onclick="showPage('statistics'), removeNavUl()"><img src="img/statistics.svg" alt="statistics icon"></a></li>
+      <li><a href="#leaderboard" onclick="showPage('leaderboard'), removeNavUl()"><img src="img/leaderboard.svg" alt="leaderboard icon"></a></li>
+      <li><a href="#profile" onclick="showPage('profile'), removeNavUl()"><img src="img/profile.svg" alt="profile icon"></a></li>
     </ul>
   </nav>
 
